--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Education'
 - !lcc 'LB'
+- GITenberg
 title: Thoughts on Educational Topics and Institutions
 url: http://www.gutenberg.org/ebooks/19056
